Move Python files to subdirectory

--- a/hpsearch.ipynb
+++ b/hpsearch.ipynb
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ba4192c8-9104-490c-a82e-315533db8829",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch as t\n",
-    "from gns import MultiDiffusionGN\n",
-    "from gnns import LinearGNN\n",
-    "from hyperparamsearch import hpsearch\n",
-    "from graph_compare import model_steps_compare\n",
+    "from gninvert.gns import MultiDiffusionGN\n",
+    "from gninvert.gnns import LinearGNN\n",
+    "from gninvert.hyperparamsearch import hpsearch\n",
+    "from gninvert.graph_compare import model_steps_compare\n",
     "import matplotlib.pyplot as plt"
    ]
   },
