--- a/sim1.ipynb
+++ b/sim1.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 1,
    "id": "75f418c4-832a-427d-b0ef-bb545257deb7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 4,
    "id": "d3aa439c-abdc-46f3-9568-00436d11eb69",
    "metadata": {},
    "outputs": [],
@@ -37,17 +28,17 @@
     "from torch_geometric.utils import to_networkx, from_networkx\n",
     "import networkx as nx\n",
     "\n",
-    "from functions import \\\n",
+    "from gninvert.functions import \\\n",
     "run_GN, make_color_scale, gdisplay, run_and_draw,\\\n",
     "generate_training_data, graphs_loss_func,\\\n",
     "loss_batch, fit, randrange,\\\n",
     "gn_time_series\n",
     "\n",
-    "from training import fit\n",
+    "from gninvert.training import fit\n",
     "\n",
-    "from gns import SingleDiffusionGN, EquationGN\n",
-    "from gnns import LinearGNN\n",
-    "from graph_compare import graph_compare, model_compare"
+    "from gninvert.gns import SingleDiffusionGN, EquationGN\n",
+    "from gninvert.gnns import LinearGNN\n",
+    "from gninvert.graph_compare import graph_compare, model_compare"
    ]
   },
   {
@@ -1311,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 245,
    "id": "8b6aa9e4-5dc3-432f-b6f1-3604f988219d",
    "metadata": {},
    "outputs": [
