--- a/sim2-model-compare.ipynb
+++ b/sim2-model-compare.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "220057bd-3e95-4085-a1d2-9ad33dfb35e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch as t\n",
-    "from graph_compare import model_compare\n",
-    "from gns import MultiDiffusionGN"
+    "from gninvert.graph_compare import model_compare\n",
+    "from gninvert.gns import MultiDiffusionGN"
    ]
   },
   {
