--- a/sym-reg-tests.ipynb
+++ b/sym-reg-tests.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 116,
    "id": "5656cf9a-9d46-4430-9fd8-6dc0c703d38d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from gplearn.genetic import SymbolicRegressor\n",
-    "from symbolic_regression import get_equations\n",
+    "from gninvert.symbolic_regression import get_gplearn_equations\n",
     "import numpy as np\n",
     "import torch as t"
    ]
