Upload hyperparam search attempts

--- a/hpsearch.ipynb
+++ b/hpsearch.ipynb
@@ -954,7 +954,36 @@
     "plt.scatter([result['score'] for result in results],\n",
     "            [result['val_loss_history'][-1] for result in results])\n",
     "\n",
-    "plt.xlabel('last-step avg similarity')\n",
+    "plt.xlabel('last-step avg. absolute difference')\n",
+    "plt.ylabel('final validation loss')\n",
+    "\n",
+    "plt.yscale('log')\n",
+    "plt.xscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d524e3fd-9361-40ea-8c41-e5045b8e9b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mscatter([result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscore\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m result \u001b[38;5;129;01min\u001b[39;00m \u001b[43mresults\u001b[49m],\n\u001b[1;32m      2\u001b[0m             [result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss_history\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m result \u001b[38;5;129;01min\u001b[39;00m results])\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlast-step avg. absolute difference\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfinal validation loss\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "plt.scatter([result['score'] for result in results],\n",
+    "            [result['val_loss_history'][-1] for result in results])\n",
+    "\n",
+    "plt.xlabel('last-step avg. absolute difference')\n",
     "plt.ylabel('final validation loss')\n",
     "\n",
     "plt.yscale('log')\n",
