Upload notebook changes

--- a/hpsearch-GNN3layer.ipynb
+++ b/hpsearch-GNN3layer.ipynb
@@ -22,10 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "ba4192c8-9104-490c-a82e-315533db8829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (hyperparamsearch.py, line 70)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m~/.pyenv/versions/3.10.2/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3361\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m in \u001b[0;35m<cell line: 4>\u001b[0;36m\u001b[0m\n\u001b[0;31m    from gninvert.hyperparamsearch import hpsearch\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/github/gninvert/gninvert/hyperparamsearch.py:70\u001b[0;36m\u001b[0m\n\u001b[0;31m    gn != None and training_data == None:\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import torch as t\n",
     "from gninvert.gns import MultiDiffusionGN\n",
@@ -34,6 +46,48 @@
     "from gninvert.graph_compare import model_steps_compare, model_compare\n",
     "import gninvert.data_generation as data_generation\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "603ece71-3e8f-4e73-8dcd-c65a79e36515",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "callable(lambda x : x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7ee4c4f-2e65-4854-9e4c-6e82549a08fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type((1,2,3)) is not list"
    ]
   },
   {
@@ -1851,7 +1905,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
