Move notebooks and upload recent ones

--- a/old_notebooks/hpsearch_visualisation.ipynb
+++ b/old_notebooks/hpsearch_visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1fb55545-99ea-4eae-80d0-643092c9f254",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b55e345b-f03d-4504-901f-ef1957bd13ed",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2e5bf96-f1ba-4b77-850e-a3e425c41333",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,11 @@
        "      --(False)-->\n",
        "      <<<DTREE on <ATTRIBUTE 5 taking values (False, True)\n",
        "        --(False)-->\n",
-       "        <LEAF -10.033804365696714>\n",
+       "        <<<DTREE on <ATTRIBUTE 4 taking values (<class 'torch.nn.modules.activation.GELU'>, <class 'torch.nn.modules.activation.Sigmoid'>)\n",
+       "          --(<class 'torch.nn.modules.activation.GELU'>)-->\n",
+       "          <LEAF -11.023685167972358>\n",
+       "          --(<class 'torch.nn.modules.activation.Sigmoid'>)-->\n",
+       "          <LEAF -9.043923563421064> >>>\n",
        "        --(True)-->\n",
        "        <<<DTREE on <ATTRIBUTE 4 taking values (<class 'torch.nn.modules.activation.GELU'>, <class 'torch.nn.modules.activation.Sigmoid'>)\n",
        "          --(<class 'torch.nn.modules.activation.GELU'>)-->\n",
@@ -70,26 +74,128 @@
        "            --((32,))-->\n",
        "            <LEAF -11.18513402209824>\n",
        "            --((128,))-->\n",
-       "            <LEAF -5.724183883138526>\n",
+       "            <<<DTREE on <ATTRIBUTE regularization_norm taking values (2, 0.5, 1)\n",
+       "              --(2)-->\n",
+       "              <<<DTREE on <ATTRIBUTE lr_scheduler_patience taking values (10, 50)\n",
+       "                --(10)-->\n",
+       "                <<<DTREE on <ATTRIBUTE momentum taking values (0.0001, 0.01)\n",
+       "                  --(0.0001)-->\n",
+       "                  <LEAF -0.033716494322489465>\n",
+       "                  --(0.01)-->\n",
+       "                  <LEAF -12.275164090888431> >>>\n",
+       "                --(50)-->\n",
+       "                <LEAF -0.033716494322489465> >>>\n",
+       "              --(0.5)-->\n",
+       "              <<<DTREE on <ATTRIBUTE lr_scheduler_patience taking values (10, 50)\n",
+       "                --(10)-->\n",
+       "                <<<DTREE on <ATTRIBUTE momentum taking values (0.0001, 0.01)\n",
+       "                  --(0.0001)-->\n",
+       "                  <LEAF -0.033716494322489465>\n",
+       "                  --(0.01)-->\n",
+       "                  <LEAF -11.311422837515613> >>>\n",
+       "                --(50)-->\n",
+       "                <<<DTREE on <ATTRIBUTE momentum taking values (0.0001, 0.01)\n",
+       "                  --(0.0001)-->\n",
+       "                  <LEAF -11.716987655717322>\n",
+       "                  --(0.01)-->\n",
+       "                  <LEAF -0.033716494322489465> >>> >>>\n",
+       "              --(1)-->\n",
+       "              <<<DTREE on <ATTRIBUTE lr_scheduler_patience taking values (10, 50)\n",
+       "                --(10)-->\n",
+       "                <LEAF -11.489943911143573>\n",
+       "                --(50)-->\n",
+       "                <<<DTREE on <ATTRIBUTE momentum taking values (0.0001, 0.01)\n",
+       "                  --(0.0001)-->\n",
+       "                  <LEAF -0.033716494322489465>\n",
+       "                  --(0.01)-->\n",
+       "                  <LEAF -10.204445225318848> >>> >>> >>>\n",
        "            --((8, 8))-->\n",
-       "            <LEAF -10.7455235304654>\n",
+       "            <LEAF -10.745523530465396>\n",
        "            --((128, 128))-->\n",
        "            <LEAF -0.033716494322489465>\n",
        "            --((8,))-->\n",
        "            <LEAF -10.11597149223852> >>>\n",
        "          --(<class 'torch.nn.modules.activation.Sigmoid'>)-->\n",
-       "          <LEAF -3.95157580616395> >>> >>>\n",
+       "          <LEAF -3.951575806163948> >>> >>>\n",
        "      --(1e-05)-->\n",
-       "      <LEAF -7.438329932239266>\n",
+       "      <<<DTREE on <ATTRIBUTE 4 taking values (<class 'torch.nn.modules.activation.GELU'>, <class 'torch.nn.modules.activation.Sigmoid'>)\n",
+       "        --(<class 'torch.nn.modules.activation.GELU'>)-->\n",
+       "        <<<DTREE on <ATTRIBUTE 3 taking values ([32, 32], [8, 8, 8], [32], [128], [8, 8], [128, 128], [8])\n",
+       "          --((32, 32))-->\n",
+       "          <LEAF -9.680028397224385>\n",
+       "          --((8, 8, 8))-->\n",
+       "          <LEAF -9.72243001327934>\n",
+       "          --((32,))-->\n",
+       "          <LEAF -10.292508760988113>\n",
+       "          --((128,))-->\n",
+       "          <<<DTREE on <ATTRIBUTE regularization_norm taking values (2, 0.5, 1)\n",
+       "            --(2)-->\n",
+       "            <<<DTREE on <ATTRIBUTE lr_scheduler_patience taking values (10, 50)\n",
+       "              --(10)-->\n",
+       "              <<<DTREE on <ATTRIBUTE 5 taking values (False, True)\n",
+       "                --(False)-->\n",
+       "                <LEAF -10.700071929882268>\n",
+       "                --(True)-->\n",
+       "                <<<DTREE on <ATTRIBUTE momentum taking values (0.0001, 0.01)\n",
+       "                  --(0.0001)-->\n",
+       "                  <LEAF -0.033716494322489465>\n",
+       "                  --(0.01)-->\n",
+       "                  <LEAF -10.818505645339727> >>> >>>\n",
+       "              --(50)-->\n",
+       "              <LEAF -11.444235348494342> >>>\n",
+       "            --(0.5)-->\n",
+       "            <LEAF -5.504037062118518>\n",
+       "            --(1)-->\n",
+       "            <LEAF -11.139495484132222> >>>\n",
+       "          --((8, 8))-->\n",
+       "          <LEAF -10.223792876857987>\n",
+       "          --((128, 128))-->\n",
+       "          <<<DTREE on <ATTRIBUTE 5 taking values (False, True)\n",
+       "            --(False)-->\n",
+       "            <LEAF -8.693470516366485>\n",
+       "            --(True)-->\n",
+       "            <LEAF -0.0337054081864211> >>>\n",
+       "          --((8,))-->\n",
+       "          <LEAF -9.895797432376847> >>>\n",
+       "        --(<class 'torch.nn.modules.activation.Sigmoid'>)-->\n",
+       "        <LEAF -5.866516865980102> >>>\n",
        "      --(0.001)-->\n",
-       "      <LEAF -4.880643381787394> >>>\n",
+       "      <<<DTREE on <ATTRIBUTE 4 taking values (<class 'torch.nn.modules.activation.GELU'>, <class 'torch.nn.modules.activation.Sigmoid'>)\n",
+       "        --(<class 'torch.nn.modules.activation.GELU'>)-->\n",
+       "        <<<DTREE on <ATTRIBUTE regularization_norm taking values (2, 0.5, 1)\n",
+       "          --(2)-->\n",
+       "          <<<DTREE on <ATTRIBUTE 3 taking values ([32, 32], [8, 8, 8], [32], [128], [8, 8], [128, 128], [8])\n",
+       "            --((32, 32))-->\n",
+       "            <LEAF -7.197932567466019>\n",
+       "            --((8, 8, 8))-->\n",
+       "            <LEAF -7.656883650059513>\n",
+       "            --((32,))-->\n",
+       "            <LEAF -8.832847879682179>\n",
+       "            --((128,))-->\n",
+       "            <LEAF -6.78633733418202>\n",
+       "            --((8, 8))-->\n",
+       "            <LEAF -7.798507468684769>\n",
+       "            --((128, 128))-->\n",
+       "            <<<DTREE on <ATTRIBUTE 5 taking values (False, True)\n",
+       "              --(False)-->\n",
+       "              <LEAF -9.496915420468419>\n",
+       "              --(True)-->\n",
+       "              <LEAF -0.033716494322489465> >>>\n",
+       "            --((8,))-->\n",
+       "            <LEAF -8.621510324343275> >>>\n",
+       "          --(0.5)-->\n",
+       "          <LEAF -4.335605529320093>\n",
+       "          --(1)-->\n",
+       "          <LEAF -5.23592763364871> >>>\n",
+       "        --(<class 'torch.nn.modules.activation.Sigmoid'>)-->\n",
+       "        <LEAF -4.104318821398037> >>> >>>\n",
        "    --(sgd)-->\n",
-       "    <LEAF -4.690343239568344> >>>\n",
+       "    <LEAF -4.6903432395683495> >>>\n",
        "  --(L1Loss())-->\n",
-       "  <LEAF -3.1494550554238074> >>>"
+       "  <LEAF -3.1494550554238017> >>>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +203,7 @@
    "source": [
     "dtree = get_hyperparam_dtree(\n",
     "    results,\n",
-    "    eq_threshold = 13\n",
+    "    eq_threshold = 10\n",
     ")\n",
     "dtree"
    ]
