--- a/old_notebooks/debug_training.ipynb
+++ b/old_notebooks/debug_training.ipynb
@@ -27,6 +27,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 521,
+   "id": "534d9679-3d03-4123-a920-fe4206cfd9aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "set([1, 2, 3]).add(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 522,
+   "id": "35a798f6-7d65-4d5a-bcab-91c011fa5a03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 522,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set([1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 212,
    "id": "c94b9cbe-fa66-41f6-9964-05125640d296",
    "metadata": {},
@@ -368,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
